# Coda

./: .gitignore  CMakeLists.txt  PLUGINS.md  README.md  plugins.json
include/: ConfigManager.h  IPlugin.h  ISyntaxHighlighter.h  ResourceLoader.h
resources/: config.json
resources/plugins/: example.lua
resources/styles/: dark.qss  light.qss
scripts/: example.lua
src/: EditorWidget.cpp  EditorWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: ConfigManager.cpp  EditorWidget.cpp  EditorWidget.h  MainWindow.cpp  MainWindow.h  PluginManager.cpp  PluginManager.h  ResourceLoader.cpp  ScriptingEngine.cpp  ScriptingEngine.h  ShortcutManager.cpp  ShortcutManager.h
src/syntax/: KSyntaxHighlightingAdapter.cpp  KSyntaxHighlightingAdapter.h
